[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/ButtonAnchor.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GraphicalItems/BusyWobble.gd" type="Script" id=2]
[ext_resource path="res://Resources/Sprites/ButtonSmall.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 4 )

[node name="ButtonAnchor" type="Node2D"]
position = Vector2( 32, 32 )
script = ExtResource( 1 )

[node name="BusyWobble" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Button" type="TextureButton" parent="BusyWobble"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="BusyWobble/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Action"
align = 1
valign = 1
autowrap = true
[connection signal="button_down" from="BusyWobble/Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="BusyWobble/Button" to="." method="_on_Button_button_up"]
